🚀 4단계 - 리팩터링 (#64)
* refactor: HttpResponse Http 스펙에 맞게 StatusLine vo 추가

* refactor: Requestbody, ResponseBody -> MessageBody 이름 변경

* refactor: QueryParam.java -> QueryString.java vo 네이밍 변경

- 비즈니스 레이어에 있던 Map<String, Object>타입 파라미터 UserDto 타입으로 변경

* refactor: QueryParam.java -> QueryString.java vo 네이밍 변경

- 비즈니스 레이어에 있던 Map<String, Object>타입 파라미터 UserDto 타입으로 변경

* refactor: response message 생성 중복 메서드들 HttpFormat 유틸 클래스로 일원화

* refactor: request, response 매직넘버 정리

* refactor: SessionManager#getOrCreate 추가

* refactor: GET, POST 분기 AbstractController 상위 레이어로 이동

- HttpServletRequest, HttpServletResponse 추가