@@ -1,8 +1,8 @@
 package jakarta;
 
 import org.apache.coyote.http11.HttpCookie;
-import org.apache.coyote.http11.constants.HttpCookies;
 
+import java.util.Collections;
 import java.util.Map;
 
 public class Cookie {
@@ -20,7 +20,15 @@ public class Cookie {
         return new Cookie(cookie.getMap());
     }
 
+    public String getValue(String key) {
+        return cookieMap.get(key);
+    }
+
     public static Cookie ofJsessionId(String jsessionId) {
-        return new Cookie(Map.of(HttpCookies.JSESSIONID, jsessionId));
+        return new Cookie(Map.of(HttpCookie.JSESSIONID, jsessionId));
+    }
+
+    public Map<String, String> value() {
+        return Collections.unmodifiableMap(cookieMap);
     }
 }
